# UE4SSCPPTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  setup_cross_compile.sh
.github/workflows/: build.yml
patches/: ue4ss-cross-compile.patch
proxy_generator/: proxy_generator.py
templates/default/: .gitignore  README.md  flake.nix
templates/default/src/: CMakeLists.txt  main.cpp
